@@ -2,6 +2,7 @@
 
 * Added -B CLI option to use the :body authentication scheme (Seth)
 * Added :ca_file consumer option to allow consumer specific certificate override. (Pelle)
+* Added a secure_equals in Helper to prevent timing attacks. (Pelle)
 
 == 0.3.5 2009-06-03
 
